--- a/XQNTKayak/Assembly-CSharp.csproj
+++ b/XQNTKayak/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Boat.cs" />
     <Compile Include="Assets\Scripts\GameCamera.cs" />
+    <Compile Include="Assets\Scripts\InputManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
