Adding a simple way to draw lines so I can see the boat actually moving

--- a/XQNTKayak/Assembly-CSharp.csproj
+++ b/XQNTKayak/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Assets\Scripts\Boat.cs" />
     <Compile Include="Assets\Scripts\GameCamera.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
+    <Compile Include="Assets\Scripts\WaveDrawer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
